# auditflow

./: .gitignore  Makefile  README.md
api/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
api/app/: config.py  db.py  deps.py  main.py
api/app/models/: audit_log.py  batch.py  batch_record.py
api/app/routes/: ai.py  audit_logs.py  batches.py  integrations.py
api/app/schemas/: audit_schema.py  batch_schema.py
api/app/services/: ai_summary_service.py  audit_service.py  batch_service.py  csv_parser.py  integration_service.py  validation_service.py
api/app/services/ai_providers/: __init__.py  factory.py  mock_provider.py  ollama_provider.py
api/tests/: conftest.py  test_ai_providers.py  test_ai_summary_routes.py  test_audit_logs_routes.py  test_batches_routes.py  test_csv_parser.py  test_health.py  test_integrations_routes.py  test_validation_service.py
sample-data/: client-services-sample.csv
web/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/src/: App.tsx  env.ts  index.css
web/src/api/: auditLogs.ts  batches.ts  client.test.ts  client.ts  types.ts
web/src/components/: AiSummaryPanel.test.tsx  AiSummaryPanel.tsx  AuditLogTable.test.tsx  AuditLogTable.tsx  BatchSummaryCards.test.tsx  BatchSummaryCards.tsx  MockIntegrationActions.test.tsx  MockIntegrationActions.tsx  UploadCsvCard.test.tsx  UploadCsvCard.tsx  ValidationResultsTable.test.tsx  ValidationResultsTable.tsx
web/src/pages/: AuditLogsPage.test.tsx  AuditLogsPage.tsx  DashboardPage.test.tsx  (+1 more)
(+6 files in other folders)
